<resources>

    <string name="app_name">高仿点评</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--首页-->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_guide_btn">点击立即进入</string>
    <string name="main_home">首页</string>
    <string name="main_tuan">团购</string>
    <string name="main_search">索搜</string>
    <string name="index_top_city">选择城市</string>
    <!-- 城市 -->
    <string name="city_name">所在城市</string>
    <string name="city_country">国内城市</string>
    <string name="city_default">北京</string>
    <string name="city_location">定位城市</string>
    <string name="city_search">正在定位中&#8230;</string>
    <!-- 注册 -->
    <string name="register_title">注册</string>
    <string name="register_phone_default">输入手机号</string>
    <string name="register_check_num_default">输入验证码</string>
    <string name="register_get_check_num">获取验证码</string>
    <string name="register_upass_default">需组合数字、字母或符号</string>
    <string name="register_info">我已看过并同意大众点评网《用户使用协议》</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!--个人信息-->
    <string name="address_title">个人信息</string>
    <!--订单-->
    <string name="orders_title">订单信息</string>
</resources>
