<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/normal_bg_color"
    >

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/register_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_back_u"
                android:contentDescription="@null"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/padding_10dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/register_title"
                android:textSize="@dimen/texisize_18sp"
                android:padding="@dimen/padding_10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/padding_10dp"
            android:background="@color/normal_orange_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_width_45dp"
            android:background="@drawable/mini_block_item_normal"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/register_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/padding_10dp"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/my_register_phone"
                android:drawablePadding="@dimen/padding_10dp"
                android:hint="@string/register_phone_default"
                android:inputType="phone"
                android:singleLine="true" />

            <Button
                android:id="@+id/register_get_check_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/my_register_get_check_pass"
                android:text="@string/register_get_check_num"
                android:textColor="@color/gray"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <EditText
            android:id="@+id/register_check_upass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_width_45dp"
            android:layout_marginLeft="@dimen/padding_10dp"
            android:background="@drawable/mini_block_item_normal"
            android:drawablePadding="@dimen/padding_10dp"
            android:hint="@string/register_check_num_default"
            android:inputType="text"
            android:singleLine="true"
            android:drawableLeft="@drawable/my_register_check_pass"/>
        <EditText
            android:id="@+id/register_upass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_width_45dp"
            android:layout_marginLeft="@dimen/padding_10dp"
            android:background="@drawable/mini_block_item_normal"
            android:drawablePadding="@dimen/padding_10dp"
            android:hint="@string/register_upass_default"
            android:inputType="textPassword"
            android:singleLine="true"
            android:drawableLeft="@drawable/my_register_pass"/>

    </LinearLayout>
    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_10dp"
        android:background="@drawable/mini_orange_bg"
        android:padding="@dimen/padding_5dp"
        android:text="@string/register_title"
        android:textColor="@color/white"
        android:textSize="@dimen/texisize_18sp"
        android:layout_below="@id/register_layout"/>

    <CheckBox
        android:id="@+id/register_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_btn"
        android:layout_alignLeft="@id/register_btn"
        android:button="@drawable/my_register_check_info"
        android:checked="true"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_info"
        android:layout_below="@id/register_btn"
        android:layout_toRightOf="@id/register_info"
        android:layout_alignTop="@id/register_info"
        android:layout_alignBottom="@id/register_info"
        android:paddingLeft="@dimen/padding_10dp"
        android:gravity="center_vertical"
        android:singleLine="true"/>
</RelativeLayout>